--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <button id="confirm-btn" class="btn">Confirm Order</button>
   </div>
 </body>
-<script src="js.js" defer></script>
+<script src="script.js" defer></script>
+
 </html>
